2002-08-31  Seth Robertson  <seth@hawking.sysdetect.com>

	* lib/b_netutils.c (bk_inet_ntoa): Need to null terminate
	addresses.  I *hope* this will not break anything, and it was
	previously documented to require my change...
	
2002-08-27  Seth Robertson  <seth@winwood.sysdetect.com>

	* lib/b_string.c (bk_strhash): Combine old and new string hash
	functions into one, with flag selection, old default.

2002-08-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (BK_FUNCNAME): Insure doesn't grok __func__

	* lib/b_string.c: weird insure++ error was just due to feeping
	creaturism of string functions; splitting b_string.c into two files
	eliminates the problem until we add another ten functions more...
	
	* lib/b_strconv.c: string conversion functions [bk_string_*to* et al.]

2002-08-27  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c (bk_string_atof): Provide alternate version
	#ifdef INSIGHT -- insight cannot compile it for some reason.

2002-08-22  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_string.c (bk_strnchr): added function

	* lib/b_url.c (bk_url_parse_authority): parse authority section of url

2002-08-20  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_sysutils.c (bk_gethostname): Linux changed, without
	documentation of the new value, the error value for gethostname
	when the buffer supplied is not large enough.  Grr...

2002-08-19  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_fun.c (bk_fun_trace): Don't dump on missing B

2002-08-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_bufhash): hash for vptr

2002-08-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_listnum.c (bk_listnum_next): New flag parameter:
	BK_LISTNUM_PRUNE_EMPTY to prune lists with no elements in them.
	Significant time savings for scan detection.

2002-08-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (FLAG_BEGIN, FLAG_END): use [], not <>, for XML compat