@@ -1,3 +1,7 @@
+2002-09-04  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_strconv.c (bk_string_flagtoa): return 0 on success, per docs
+
 2002-08-31  Seth Robertson  <seth@hawking.sysdetect.com>
 
 	* lib/b_netutils.c (bk_inet_ntoa): Need to null terminate
